--- a/language/en-GB/en-GB.mod_responsivemenu.ini
+++ b/language/en-GB/en-GB.mod_responsivemenu.ini
@@ -73,3 +73,12 @@ MOD_RESPONSIVEMENU_FIELD_SEARCHLABEL_LABEL="Search button text"
 MOD_RESPONSIVEMENU_FIELD_SEARCHLABEL_DESC="Text for the search button"
 MOD_RESPONSIVEMENU_FIELD_SEARCHICON_LABEL="Search icon"
 MOD_RESPONSIVEMENU_FIELD_SEARCHICON_DESCC="Icon class for the search button"
+MOD_RESPONSIVEMENU_FIELD_SHOWPHONE_LABEL="Toon telefoon icon"
+MOD_RESPONSIVEMENU_FIELD_SHOWPHONE_DESC="Toon een telefoon icoon in de mobiele bar"
+MOD_RESPONSIVEMENU_FIELD_SHOWSEARCHLABEL_LABEL="Toon zoeklabel"
+MOD_RESPONSIVEMENU_FIELD_SHOWSEARCHLABEL_DESC="Toon zoeklabel (let op dat het misschien niet goed past)"
+MOD_RESPONSIVEMENU_FIELD_SHOWSEARCHLABEL_LABEL="Toon zoeklabel"
+MOD_RESPONSIVEMENU_FIELD_SHOWMENU_LABEL="Toon menulabel"
+MOD_RESPONSIVEMENU_FIELD_SHOWMENU_DESC="Toon menulabel in mobielmenu"
+MOD_RESPONSIVEMENU_FIELD_SHOWCONTACT_LABEL ="Toon contact icon"
+MOD_RESPONSIVEMENU_FIELD_SHOWCONTACT_DESC ="Toon contact icon in mobielmenu"
